--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p class="link">Download Excursion (Coming soon!)</p>
+    <div>
+      <video src="./resources/videos/excursion.mp4" controls>Video not supported</video>
+    </div>
     <h2>Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <div>
+      <img src="./resources/images/camp.jpg">
+    </div>
+    <p id="icon">
+      <img src="./resources/images/phone.png">
+    </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p class="link">Download Excursion (Coming soon!)</p>
   </body>
