--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p class="link">Download Excursion (Coming soon!)</p>
+    <p class="copyright">© Excursion</p>
   </body>
 </html>
