--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Discover hidden places in the world around you</h1>
     <p class="link">Download Excursion (Coming soon!)</p>
     <div>
-      <video src="./resources/videos/excursion.mp4" controls>Video not supported</video>
+      <video src="./resources/videos/excursion.mp4" autoplay>Video not supported</video>
     </div>
     <h2>Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
