--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <title>Excursion</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
+
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p class="link">Download Excursion (Coming soon!)</p>
     <div>
-      <video src="./resources/videos/excursion.mp4" autoplay>Video not supported</video>
+      <video autoplay muted loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+      </video>
     </div>
+
     <h2>Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
     <div>
       <img src="./resources/images/camp.jpg">
     </div>
@@ -21,6 +26,7 @@
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p class="link">Download Excursion (Coming soon!)</p>
+
     <p class="copyright">© Excursion</p>
   </body>
 </html>
